Urnenliste in MapperTests gefüllt und Renaming DTOMapperTest fixed